[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GUI/ExitToMainScreenMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/GuiFont/HackbotFont_sub_header.tres" type="DynamicFont" id=2]

[node name="ExitToMainScreenMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 814.0
margin_top = 476.0
margin_right = 1105.0
margin_bottom = 603.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 284.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -3488, -1035 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 277.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 277.0
margin_bottom = 65.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Are you sure you want 
to leave?"

[node name="NoButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 277.0
margin_bottom = 89.0
text = "No"

[node name="YesButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 277.0
margin_bottom = 113.0
text = "Yes"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
